added new repository to add custom methods, simplified logic